--- a/packages/icons/deprecated.yml
+++ b/packages/icons/deprecated.yml
@@ -5,3 +5,9 @@ deprecated:
   - name: cloud--rain
   - name: cloud--snow
   - name: sunny
+  - name: research--bloch-sphere
+    reason: research--bloch-sphere has been replaced in favor of bloch-sphere 
+  - name: research--hinton-plot 
+    reason: research--hinton-plot has been replaced in favor of hinton-plot
+  - name: research--matrix
+    reason: research--matrix has been replaced in favor of matrix
