--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/elements",
   "description": "A collection of design elements in code for the IBM Design Language",
-  "version": "10.10.0-rc.2",
+  "version": "10.10.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -31,17 +31,17 @@
     "clean": "rimraf es lib umd && node tasks/clean.js"
   },
   "dependencies": {
-    "@carbon/colors": "^10.8.0-rc.1",
-    "@carbon/grid": "^10.9.0-rc.1",
-    "@carbon/icons": "^10.9.0-rc.2",
-    "@carbon/import-once": "10.3.0",
-    "@carbon/layout": "^10.8.0-rc.1",
-    "@carbon/motion": "^10.6.0-rc.1",
-    "@carbon/themes": "^10.10.0-rc.1",
-    "@carbon/type": "^10.9.0-rc.1"
+    "@carbon/colors": "^10.8.0",
+    "@carbon/grid": "^10.9.0",
+    "@carbon/icons": "^10.9.0",
+    "@carbon/import-once": "^10.3.0",
+    "@carbon/layout": "^10.8.0",
+    "@carbon/motion": "^10.6.0",
+    "@carbon/themes": "^10.10.0",
+    "@carbon/type": "^10.9.0"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.6.0-rc.1",
+    "@carbon/bundler": "^10.6.0",
     "fs-extra": "^8.1.0",
     "klaw-sync": "^6.0.0",
     "replace-in-file": "^3.4.2",
