--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/grid",
   "description": "Grid for digital and software products using the Carbon Design System",
-  "version": "10.9.0-rc.1",
+  "version": "10.9.0",
   "license": "Apache-2.0",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/grid",
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
@@ -27,11 +27,11 @@
     "clean": "rimraf scss/_inlined scss/vendor"
   },
   "dependencies": {
-    "@carbon/import-once": "10.3.0",
-    "@carbon/layout": "^10.8.0-rc.1"
+    "@carbon/import-once": "^10.3.0",
+    "@carbon/layout": "^10.8.0"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.6.0-rc.1",
+    "@carbon/bundler": "^10.6.0",
     "rimraf": "^3.0.0"
   },
   "eyeglass": {
