--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/icons-react",
   "description": "React components for icons in digital and software products using the Carbon Design System",
-  "version": "10.9.0-rc.2",
+  "version": "10.9.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -29,11 +29,11 @@
     "clean": "rimraf es lib umd"
   },
   "dependencies": {
-    "@carbon/icon-helpers": "^10.6.0-rc.1"
+    "@carbon/icon-helpers": "^10.6.0"
   },
   "devDependencies": {
-    "@carbon/icon-build-helpers": "^0.4.0-rc.1",
-    "@carbon/icons": "^10.9.0-rc.2"
+    "@carbon/icon-build-helpers": "^0.4.0",
+    "@carbon/icons": "^10.9.0"
   },
   "sideEffects": false
 }
