--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/layout",
   "description": "Layout helpers for digital and software products using the Carbon Design System",
-  "version": "10.8.0-rc.1",
+  "version": "10.8.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -25,10 +25,10 @@
     "clean": "rimraf es lib umd scss/generated"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.6.0-rc.1",
-    "@carbon/cli-reporter": "10.3.0",
-    "@carbon/scss-generator": "^10.6.0-rc.1",
-    "@carbon/test-utils": "^10.7.0-rc.1",
+    "@carbon/bundler": "^10.6.0",
+    "@carbon/cli-reporter": "^10.3.0",
+    "@carbon/scss-generator": "^10.6.0",
+    "@carbon/test-utils": "^10.7.0",
     "core-js": "^3.4.0",
     "rimraf": "^3.0.0"
   },
