--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components-react",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "7.10.0-rc.4",
+  "version": "7.10.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -38,7 +38,7 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "@carbon/icons-react": "^10.9.0-rc.2",
+    "@carbon/icons-react": "^10.9.0",
     "classnames": "2.2.6",
     "downshift": "^1.31.14",
     "flatpickr": "4.6.1",
@@ -63,7 +63,7 @@
     "@babel/plugin-transform-object-assign": "^7.7.4",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
-    "@carbon/test-utils": "^10.7.0-rc.1",
+    "@carbon/test-utils": "^10.7.0",
     "@storybook/addon-a11y": "^5.2.1",
     "@storybook/addon-actions": "^5.2.1",
     "@storybook/addon-info": "^5.2.1",
@@ -78,8 +78,8 @@
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-react-docgen": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.0",
-    "browserslist-config-carbon": "10.4.0",
-    "carbon-components": "^10.10.0-rc.4",
+    "browserslist-config-carbon": "^10.4.0",
+    "carbon-components": "^10.10.0",
     "carbon-icons": "^7.0.5",
     "chalk": "^2.3.0",
     "cli-table": "^0.3.0",
