--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/themes",
   "description": "Themes for applying color in the Carbon Design System",
-  "version": "10.10.0",
+  "version": "10.10.1-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -25,8 +25,8 @@
   },
   "dependencies": {
     "@carbon/colors": "^10.8.0",
-    "@carbon/layout": "^10.8.0",
-    "@carbon/type": "^10.9.0",
+    "@carbon/layout": "^10.8.1-rc.0",
+    "@carbon/type": "^10.9.1-rc.0",
     "color": "^3.1.2"
   },
   "devDependencies": {
