--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,3 +10,8 @@
 
 # Brand
 /packages/colors/artifacts/ @lisalind-ibm
+
+# Release team should be notified of Public API changes in the following
+# packages
+/packages/react/__tests__/PublicAPI-test.js @carbon-design-system/developers-system @carbon-design-system/release
+/packages/react/__tests__/__snapshots__/PublicAPI-test.js.snap @carbon-design-system/developers-system @carbon-design-system/release
