--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -47,6 +47,7 @@
     "lodash.findlast": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.omit": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
     "react-is": "^16.8.6",
     "warning": "^3.0.0",
     "window-or-global": "^1.0.1"
