fix(icon): makes up-to-top = back-to-top (#5509)
* Delete up-to-top.svg

makes back-to-top = up-to-top

* updates to up-to-top

makes 32/up-to-top.svg = 32/back-to-top.svg (deprecated name)

deletes 16/up-to-top.svg

* Update icons.yml

removes bespoke size 16 from icons.yml

* Update deprecated.yml

* Update deprecated.yml

clearer call to action for deprecation reasons

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/icons/deprecated.yml
+++ b/packages/icons/deprecated.yml
@@ -1,13 +1,15 @@
 deprecated:
   - name: app-switcher
-    reason: The app switcher icon has been replaced in favor of switcher
+    reason: The app switcher icon has been replaced by switcher
+  - name: back-to-top
+    reason: The back-to-top icon has been replaced by up-to-top
   - name: cloud--lightning
   - name: cloud--rain
   - name: cloud--snow
   - name: sunny
   - name: research--bloch-sphere
-    reason: research--bloch-sphere has been replaced in favor of bloch-sphere 
+    reason: research--bloch-sphere has been replaced by bloch-sphere 
   - name: research--hinton-plot 
-    reason: research--hinton-plot has been replaced in favor of hinton-plot
+    reason: research--hinton-plot has been replaced by hinton-plot
   - name: research--matrix
-    reason: research--matrix has been replaced in favor of matrix
+    reason: research--matrix has been replaced by matrix
