--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -66,10 +66,12 @@
     "freshy": ">= 1.0.3"
   },
   "dependencies": {
-    "carbon-icons": "^7.0.7",
     "flatpickr": "4.6.1",
     "lodash.debounce": "^4.0.8",
     "warning": "^3.0.0"
+  },
+  "peerDependencies": {
+    "@carbon/icons": "^10.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
