chore(github): add workflow and action for automating review labels (#5649)
* chore(github): add workflow and action for automating review labels

* feat(cli): add support for multiple package roots

* chore(actions): run sync command for package files

* Update actions/add-review-labels/index.js

* Update actions/add-review-labels/index.js

* Update actions/add-review-labels/index.js

* fix(actions): update logic for adding ready label

* chore(project): update eslint to check in actions folder

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "workspaces": {
     "packages": [
-      "packages/*"
+      "packages/*",
+      "actions/*"
     ],
     "nohoist": []
   },
@@ -20,7 +21,7 @@
     "doctoc": "doctoc --title '## Table of Contents'",
     "format": "prettier --write '**/*.{js,md,scss,ts}' '!**/{build,es,lib,storybook,ts,umd}/**'",
     "format:diff": "prettier --list-different '**/*.{js,md,scss,ts}' '!**/{build,es,lib,storybook,ts,umd}/**' '!packages/components/**'",
-    "lint": "eslint packages",
+    "lint": "eslint packages actions",
     "lint:docs": "alex 'docs/**/*.md' -q",
     "lint:styles": "stylelint '**/*.{css,scss}' --config ./packages/stylelint-config-elements",
     "sync": "carbon-cli sync",
