--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,6 +26,7 @@
     "chalk": "^2.4.2",
     "child-process-promise": "^2.2.1",
     "clipboardy": "^2.1.0",
+    "fast-glob": "^3.2.2",
     "fs-extra": "^8.0.1",
     "inquirer": "^6.4.1",
     "prettier": "^1.19.1",
