feat(sketch): add support for generating icon ranges (#5711)
* chore: check-in

* fix(icons): update svg assets

Each svg asset was rendering with an extra path which was causing the number to
be "punched out" when we combined paths. This diff goes through and removes them
from the corresponding svg assets.

* fix(pictograms): update build script

* feat(sketch): add support for generating icon ranges

This patch adds support for building icons in the [32, 24] range and the [20,
16] range. In addition, it addresses some common icon rendering bugs by taking
advantage of the new asset extension from `icon-build-helpers`. We now render
icons in Sketch directly from the asset source instead of from the generated
source.

* docs(sketch): add JSDoc to shared icon commands

* chore(sketch): add generated folder to clean task

* chore(sketch): fix eslint violations

* Update packages/sketch/src/commands/icons/sync.js

* Update packages/sketch/src/commands/icons/sync.js

* chore(icons,pictograms): update ci-check and scaffold scripts

* fix(icons): update generate command to omit deprecated icons

* fix(icons): update redo and undo to include background

* fix(sketch): remove transparent layers from symbol artboard

--- a/packages/sketch/src/manifest.json
+++ b/packages/sketch/src/manifest.json
@@ -47,10 +47,16 @@
       "handler": "generateIcons"
     },
     {
-      "name": "Sync icon symbols",
-      "identifier": "carbon.elements.icons.sync",
+      "name": "Sync icon symbols (24 / 32)",
+      "identifier": "carbon.elements.icons.sync.large",
       "script": "commands/index.js",
-      "handler": "syncIcons"
+      "handler": "syncLargeIcons"
+    },
+    {
+      "name": "Sync icon symbols (16 / 20)",
+      "identifier": "carbon.elements.icons.sync.small",
+      "script": "commands/index.js",
+      "handler": "syncSmallIcons"
     },
     {
       "name": "Run symbol-id-sync fixture",
@@ -84,16 +90,14 @@
       {
         "title": "Icons",
         "items": [
-          "carbon.elements.icons.sync",
+          "carbon.elements.icons.sync.small",
+          "carbon.elements.icons.sync.large",
           "carbon.elements.icons.generate"
         ]
       },
       {
         "title": "Type",
-        "items": [
-          "carbon.elements.type.sync",
-          "carbon.elements.type.generate"
-        ]
+        "items": ["carbon.elements.type.sync", "carbon.elements.type.generate"]
       },
       {
         "title": "Test",
