--- a/packages/sketch/package.json
+++ b/packages/sketch/package.json
@@ -17,8 +17,8 @@
     "access": "public"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production skpm-build",
-    "clean": "rimraf carbon-elements.sketchplugin",
+    "build": "node tasks/build.js && cross-env NODE_ENV=production skpm-build",
+    "clean": "rimraf carbon-elements.sketchplugin generated",
     "develop": "cross-env NODE_ENV=development skpm-build --watch",
     "log": "skpm log -f",
     "skpm:link": "skpm-link"
