--- a/actions/add-review-labels/package.json
+++ b/actions/add-review-labels/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/actions-add-review-labels",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0-rc.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/actions/add-review-labels",
