--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/grid",
   "description": "Grid for digital and software products using the Carbon Design System",
-  "version": "10.9.2",
+  "version": "10.10.0-rc.0",
   "license": "Apache-2.0",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/grid",
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
@@ -28,10 +28,10 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.3.0",
-    "@carbon/layout": "^10.8.2"
+    "@carbon/layout": "^10.9.0-rc.0"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.6.0",
+    "@carbon/bundler": "^10.7.0-rc.0",
     "rimraf": "^3.0.0"
   },
   "eyeglass": {
