--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/icons",
   "description": "Icons for digital and software products using the Carbon Design System",
-  "version": "10.9.3",
+  "version": "10.10.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -34,7 +34,7 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@carbon/icon-build-helpers": "^0.4.2"
+    "@carbon/icon-build-helpers": "^0.5.0-rc.0"
   },
   "gitHead": "bb04f2f061de0bda6e457a07a67cf624db375808"
 }
