--- a/packages/pictograms-react/package.json
+++ b/packages/pictograms-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/pictograms-react",
   "description": "React components for pictograms in digital and software products using the Carbon Design System",
-  "version": "10.9.2",
+  "version": "10.10.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -29,11 +29,11 @@
     "clean": "rimraf es lib umd"
   },
   "dependencies": {
-    "@carbon/icon-helpers": "^10.6.0"
+    "@carbon/icon-helpers": "^10.7.0-rc.0"
   },
   "devDependencies": {
-    "@carbon/icon-build-helpers": "^0.4.2",
-    "@carbon/pictograms": "^10.9.2"
+    "@carbon/icon-build-helpers": "^0.5.0-rc.0",
+    "@carbon/pictograms": "^10.10.0-rc.0"
   },
   "sideEffects": false
 }
