--- a/packages/react/examples/drag-and-drop-file-uploader/package.json
+++ b/packages/react/examples/drag-and-drop-file-uploader/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "carbon-components": "latest",
     "carbon-components-react": "latest",
+    "carbon-icons": "latest",
     "react": "16.10.2",
     "react-dom": "16.10.2",
     "react-scripts": "3.2.0"
