feat(pictograms): add March batch of pictograms (#5674)
* pictograms-march-01

description coming

* Update categories.yml

* Rename 3D chart.svg to 3D--chart.svg

* Rename area chart.svg to area--chart.svg

* Rename box plot.svg to box--plot.svg

* Rename bubble chart.svg to bubble--chart.svg

* Rename candlestick chart.svg to candlestick--chart.svg

* Rename circling packing.svg to circling--packing.svg

* Rename error bar chart.svg to error--bar--chart.svg

* Rename evaluation chart.svg to evaluation--chart.svg

* Rename heat map 02.svg to heat map--02.svg

* Rename heat map--02.svg to heat--map--02.svg

* Rename high low chart.svg to high--low--chart.svg

* Rename histogram chart.svg to histogram--chart.svg

* Rename math curve.svg to math--curve.svg

* Rename multi line chart.svg to multi--line--chart.svg

* Rename parallel chart.svg to parallel--chart.svg

* Rename population diagram.svg to population--diagram.svg

* Rename q-q plot.svg to q-q--plot.svg

* Rename radar chart.svg to radar--chart.svg

* Rename relationship diagram.svg to relationship--diagram.svg

* Rename river chart.svg to river--chart.svg

* Rename scatter matrix.svg to scatter--matrix.svg

* Rename t-SNE chart.svg to t-SNE--chart.svg

* Rename tree diagram.svg to tree--diagram.svg

* Rename tree map.svg to tree--map.svg

* Rename word cloud.svg to word--cloud.svg

* Update categories.yml

* Rename 3D--chart.svg to chart--3D.svg

* Rename circling--packing.svg to circle-packing.svg

* Rename area--chart.svg to chart--area.svg

* Rename error--bar--chart.svg to chart--error-bar.svg

* Rename evaluation--chart.svg to chart--evaluation.svg

* Rename heat--map--02.svg to heat-map--02.svg

* Rename high--low--chart.svg to chart--high-low.svg

* Rename histogram--chart.svg to chart--histogram.svg

* Rename math--curve.svg to math-curve.svg

* Rename multi--line--chart.svg to chart--multi-line.svg

* Rename parallel--chart

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -152,17 +152,41 @@ categories:
     members:
       - analyze
       - blockchain
+      - box-plot
+      - chart--3D
+      - chart--area
       - chart--bar
+      - chart--bubble
       - chart--bubble--line
+      - chart--candlestick
+      - chart--error-bar
+      - chart--evaluation
+      - chart--high-low
+      - chart--histogram
       - chart--line
+      - chart--multi-line
+      - chart--parallel
+      - chart--radar
+      - chart--river
       - chart--scatterplot
+      - chart--t-SNE
+      - circle-packing
       - flow--chart
       - flow--chart--detail
       - heat--map
+      - heat-map--02
+      - math-curve
+      - population-diagram
+      - q-q-plot
       - rank
+      - relationship-diagram
       - report
+      - scatter-matrix
       - secure--data
+      - tree--diagram
+      - tree--map
       - user--analytics
+      - word-cloud
   - name: Data Storage
     members:
       - archive
