--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/icon-build-helpers",
   "private": true,
   "description": "Build helpers for the Carbon Design System icon library",
-  "version": "0.5.0-rc.1",
+  "version": "0.5.0",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/icon-build-helpers",
@@ -21,7 +21,7 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@carbon/cli-reporter": "^10.3.0",
-    "@carbon/icon-helpers": "^10.7.0-rc.0",
+    "@carbon/icon-helpers": "^10.7.0",
     "browserslist-config-carbon": "^10.4.0",
     "change-case": "^4.1.1",
     "core-js": "^3.1.3",
