ci(github): update publish workflows using ibmcloud CLI (#5836)
* ci(github): update publish workflows using ibmcloud CLI

* Update deploy-vanilla-devenv.yml

--- a/.github/workflows/deploy-vanilla-devenv.yml
+++ b/.github/workflows/deploy-vanilla-devenv.yml
@@ -39,6 +39,7 @@ jobs:
           -r 'us-south'
       - name: Install IBM Cloud plugins
         run: |
+          ibmcloud cf install
           ibmcloud cf add-plugin-repo CF-Community https://plugins.cloudfoundry.org
           ibmcloud cf install-plugin blue-green-deploy -f -r CF-Community
       - name: Deploy vanilla devenv
