test(e2e): add PublicAPI tests and use metadata for icon tests (#5846)
* chore(github): update CODEOWNERS syntax for PublicAPI files

* test(e2e): add PublicAPI tests and use metadata for icon tests

* fix(icons): add registry to exports and check for duplicate sizes

* test(matchers): defer AAT module resolution until called

* docs(icon-build-helpers): add jsdoc for load export

* test(e2e): add ESM files to exports test

* chore(test): update paths for registry

* chore(github): update CODEOWNERS comments

* fix(icon-build-helpers): set namespace for pictograms

* fix(pictograms): add main and module fields to package.json

* test(e2e): add e2e tests for pictograms and pictograms-react

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -11,7 +11,6 @@
 # Brand
 /packages/colors/artifacts/ @lisalind-ibm
 
-# Release team should be notified of Public API changes in the following
-# packages
-/packages/react/__tests__/PublicAPI-test.js @carbon-design-system/release @carbon-design-system/developers-system
-/packages/react/__tests__/__snapshots__/PublicAPI-test.js.snap @carbon-design-system/release @carbon-design-system/developers-system
+# Release team should be notified of Public API changes in the system
+**/PublicAPI-test.js @carbon-design-system/release @carbon-design-system/developers-system
+**/PublicAPI-test.js.snap @carbon-design-system/release @carbon-design-system/developers-system
