--- a/packages/pictograms/package.json
+++ b/packages/pictograms/package.json
@@ -3,6 +3,8 @@
   "description": "Pictograms for digital and software products using the Carbon Design System",
   "version": "10.9.2",
   "license": "Apache-2.0",
+  "main": "lib/index.js",
+  "module": "es/index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/pictograms",
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
   "keywords": [
