--- a/packages/icons-vue/package.json
+++ b/packages/icons-vue/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/icons-vue",
   "description": "Vue components for icons in digital and software products using the Carbon Design System",
-  "version": "10.10.0",
+  "version": "10.10.1-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@carbon/cli-reporter": "^10.3.0",
-    "@carbon/icons": "^10.10.0",
+    "@carbon/icons": "^10.10.1-rc.0",
     "fs-extra": "^8.1.0",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.0",
