--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/layout",
   "description": "Layout helpers for digital and software products using the Carbon Design System",
-  "version": "10.9.0",
+  "version": "10.9.1-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -28,7 +28,7 @@
     "@carbon/bundler": "^10.7.0",
     "@carbon/cli-reporter": "^10.3.0",
     "@carbon/scss-generator": "^10.7.0",
-    "@carbon/test-utils": "^10.8.0",
+    "@carbon/test-utils": "^10.8.1-rc.0",
     "core-js": "^3.4.0",
     "rimraf": "^3.0.0"
   },
