--- a/packages/sketch/package.json
+++ b/packages/sketch/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/sketch",
   "private": true,
   "description": "Tooling for generating a sketch plugin to bring code to design",
-  "version": "10.11.0",
+  "version": "10.11.1-rc.0",
   "license": "Apache-2.0",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/sketch",
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
@@ -25,11 +25,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@carbon/colors": "^10.9.0",
+    "@carbon/colors": "^10.9.1-rc.0",
     "@carbon/icon-helpers": "^10.7.0",
-    "@carbon/icons": "^10.10.0",
-    "@carbon/themes": "^10.11.0",
-    "@carbon/type": "^10.10.0",
+    "@carbon/icons": "^10.10.1-rc.0",
+    "@carbon/themes": "^10.11.1-rc.0",
+    "@carbon/type": "^10.10.1-rc.0",
     "@skpm/builder": "^0.7.0",
     "color-string": "^1.5.3",
     "skpm": "^1.2.0"
