--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -115,6 +115,7 @@
     "storybook-readme": "^5.0.8",
     "string-replace-loader": "^2.1.0",
     "terser-webpack-plugin": "^2.3.2",
+    "use-resize-observer": "^6.0.0",
     "webpack": "^4.41.5",
     "whatwg-fetch": "^2.0.3"
   },
