chore(release): update carbon to v10.11.1

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "10.11.1-rc.0",
+  "version": "10.11.1",
   "license": "Apache-2.0",
   "main": "umd/index.js",
   "module": "es/index.js",
@@ -79,10 +79,10 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "@babel/runtime": "^7.7.7",
-    "@carbon/elements": "^10.11.1-rc.0",
-    "@carbon/icons-handlebars": "^10.10.1-rc.0",
-    "@carbon/icons-react": "^10.10.1-rc.0",
-    "@carbon/test-utils": "^10.8.1-rc.0",
+    "@carbon/elements": "^10.11.1",
+    "@carbon/icons-handlebars": "^10.10.1",
+    "@carbon/icons-react": "^10.10.1",
+    "@carbon/test-utils": "^10.8.1",
     "@frctl/fractal": "^1.1.0",
     "adaro": "1.0.4",
     "autoprefixer": "^9.7.4",
