--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/colors",
   "description": "Colors for digital and software products using the Carbon Design System",
-  "version": "10.9.1-rc.0",
+  "version": "10.9.1",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -34,7 +34,7 @@
     "@carbon/bundler": "^10.7.0",
     "@carbon/cli-reporter": "^10.3.0",
     "@carbon/scss-generator": "^10.7.0",
-    "@carbon/test-utils": "^10.8.1-rc.0",
+    "@carbon/test-utils": "^10.8.1",
     "change-case": "^4.1.1",
     "core-js": "^3.0.1",
     "fs-extra": "^8.1.0",
