feat(icons): new information icons (#6046)
* new information icons

Adding two new information icons from a request brought to me by Mike Abbink. Icons have been approved by Brand team and need to be merged asap.

updated categories.yml to include them

32/information--square.svg
32/information--square--filled.svg

* chore(icons): scaffold metadata

* chore(e2e): update snapshots

Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: jeanservaas <43144260+jeanservaas@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/icons/categories.yml
+++ b/packages/icons/categories.yml
@@ -831,6 +831,8 @@ categories:
           - help--filled
           - information
           - information--filled
+          - information--square
+          - information--square--filled
           - misuse
           - misuse--alt
           - misuse--outline
