feat(components): add sideEffects flag for webpack and DCE (#5987)
* feat(components): add sideEffects flag for webpack and DCE

* chore(components): update sideEffects with relevant paths

* Update packages/components/package.json

Co-authored-by: Akira Sudoh <asudoh@gmail.com>

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Akira Sudoh <asudoh@gmail.com>

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -190,5 +190,14 @@
       "@babel/plugin-proposal-object-rest-spread",
       "dev-expression"
     ]
-  }
+  },
+  "sideEffects": [
+    "es/bundle.js",
+    "es/globals/js/boot.js",
+    "es/globals/js/watch.js",
+    "scripts/*",
+    "umd/bundle.js",
+    "umd/globals/js/boot.js",
+    "umd/globals/js/watch.js"
+  ]
 }
