feat(project): add prettier-config-carbon package (#6168)
* feat(project): add prettier-config-carbon package

* chore(project): update cli to use prettier config

* chore: add prettier to dependencies

* chore: add prettier to dependencies

* Apply suggestions from code review

* Apply suggestions from code review

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lerna": "^3.20.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "prettier-config-carbon": "^0.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rimraf": "^3.0.0",
@@ -136,13 +137,6 @@
     "extends": [
       "eslint-config-carbon"
     ]
-  },
-  "prettier": {
-    "jsxBracketSameLine": true,
-    "printWidth": 80,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "proseWrap": "always"
   },
   "stylelint": {
     "extends": [
