--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,6 +30,7 @@
     "fs-extra": "^8.0.1",
     "inquirer": "^6.4.1",
     "prettier": "^1.19.1",
+    "prettier-config-carbon": "^0.0.0",
     "progress-estimator": "^0.2.2",
     "remark": "^10.0.1",
     "yargs": "^15.1.0"
