--- a/packages/eslint-config-carbon/package.json
+++ b/packages/eslint-config-carbon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-config-carbon",
   "private": true,
-  "version": "10.6.0",
+  "version": "10.7.0-rc.0",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/eslint-config-carbon",
