--- a/packages/pictograms/package.json
+++ b/packages/pictograms/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/pictograms",
   "description": "Pictograms for digital and software products using the Carbon Design System",
-  "version": "10.11.0",
+  "version": "10.12.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -27,7 +27,7 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
-    "@carbon/icon-build-helpers": "^0.6.0",
+    "@carbon/icon-build-helpers": "^0.7.0-rc.0",
     "rimraf": "^3.0.0"
   }
 }
