--- a/packages/type/package.json
+++ b/packages/type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/type",
   "description": "Typography for digital and software products using the Carbon Design System",
-  "version": "10.10.2",
+  "version": "10.11.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -33,11 +33,11 @@
   },
   "dependencies": {
     "@carbon/import-once": "^10.3.0",
-    "@carbon/layout": "^10.9.2"
+    "@carbon/layout": "^10.10.0-rc.0"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.7.0",
-    "@carbon/test-utils": "^10.8.2",
+    "@carbon/bundler": "^10.8.0-rc.0",
+    "@carbon/test-utils": "^10.9.0-rc.0",
     "change-case": "^4.1.1",
     "rimraf": "^3.0.0"
   },
