feat(pictograms): add new networking pictograms (#6275)
* uploaded three new networking pictos

* chore(e2e): update snapshots

Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -399,6 +399,8 @@ categories:
     members:
       - global--network
       - integration
+      - inspect--data
+      - global--partner
       - network
       - network--services
       - networking--01
@@ -406,6 +408,7 @@ categories:
       - networking--03
       - networking--04
       - networking--05
+      - networking--06
       - private--network
       - private--network--01
       - private--network--alt
