feat(pictograms): add new people pictograms (#6274)
* five new people pictograms and renamed user interface pictogram

* Apply suggestions from code review

* chore(pictograms): update metadata files

* chore(e2e): update snapshots

Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: Alessandra Davila <aledavila@ibm.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -420,6 +420,7 @@ categories:
   - name: People
     members:
       - advocate
+      - design-thinking-team
       - expand--user
       - face--dissatisfied
       - face--neutral
@@ -443,6 +444,10 @@ categories:
       - person--08
       - person--09
       - renew--team
+      - team--alignment
+      - teammates
+      - user
+      - user--profile
       - user--search
   - name: Retail
     members:
